# FastApi

./: README.md
app/: .coverage  pyproject.toml
app/app/: main.py
app/tests/: test_app.py
